# DjangoProduct

./: .gitignore  Readme.md  pyproject.toml
backend/: Dockerfile  manage.py  pyproject.toml
backend/api/: urls.py
backend/api/v1/: permissions.py  urls.py
backend/api/v1/serializers/: course_serializer.py  user_serializer.py
backend/api/v1/views/: course_view.py  user_view.py
backend/core/: constants.py
backend/courses/: admin.py  apps.py  models.py  signals.py
backend/courses/management/commands/: load_data.py  load_data_postgresql.py  load_data_sqlite3.py
backend/courses/tests/: test_models.py
backend/djangoproduct/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  signals.py
docs/: openapi-schema.yml
infra/: docker-compose.yml  nginx.conf
