[tool.poetry]
name = "djangoproduct"
version = "0.1.0"
description = ""
authors = ["Сергей Коновалов <SokiZNosoK68rus@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
isort = "^5.13.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
ipython = "^8.31.0"
djoser = "^2.3.1"
drf-spectacular = "^0.28.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_sections = 1
force_sort_within_sections = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true